--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -16,7 +16,7 @@
     {{#each article}}
     <div class="card">
       <div class="card-body bg-secondary text-white ">
-        <h4 class="card-title">{{this.title}}</h4>
+        <h4 class="card-title">{{this.topicName}}</h4>
         <a href="{{this.link}}" class="card-link" target="_blank">{{this.link}}</a>
         <a href="#" class="comments" data-id="{{this.id}}" data-target="#commentsModal" data-toggle="modal">Comments</a>
       </div>
